# CaspyORM

./: IMPLEMENTACAO_ASYNC_CLI.md  QUERYSET_SUMMARY.md  README.md  REORGANIZACAO.md  RESUMO_MELHORIAS.md  main_api.py  mkdocs.yml  pyproject.toml  pytest.ini  run_test.py  run_test_collections.py  run_test_delete.py  run_test_filters.py  run_test_list_field.py  run_test_ordering.py  run_test_queryset.py  test_improvements.py  test_pydantic_integration.py  test_queryset_advanced.py
aplicacao/: README.md  __init__.py
aplicacao/app/: main.py
aplicacao/config/: database.py
aplicacao/models/: post.py
caspyorm/: __init__.py  connection.py  exceptions.py  fields.py  model.py  query.py  results.py  serialization.py
caspyorm/_internal/: model_construction.py  query_builder.py  schema_builder.py  schema_sync.py  serialization.py
data/: README.md
docs/: ASYNC_CLI.md  MELHORIAS_IMPLEMENTADAS.md  README.md  index.md
docs/analysis/: api_analysis.md
docs/api/: fields.md  model.md
docs/performance/: performance_issues.md
examples/: README.md  cli_demo.py  dynamic_models_example.py  fastapi_integration.py  requirements.txt
examples/api/: main_api_async.py  test_api.py
examples/basic/: run.py
examples/basic/app/: __init__.py
examples/basic/models/: __init__.py  user.py
examples/basic/routers/: posts.py  users.py
scripts/: README.md  clean_tables.py
scripts/benchmark/: README.md  compare_results.py  full_benchmark.py  run_benchmarks.py
scripts/download/: download_nyc_taxi_data.py
tests/: README.md  conftest.py  test_01_model_definition.py  test_02_crud.py  test_03_collections.py  test_04_queryset.py  test_05_schema_sync.py  test_06_pydantic_api.py  test_07_exceptions.py  test_08_nivel1_improvements.py  test_09_nivel2_improvements.py  test_10_pydantic_collections.py  test_11_nivel3_improvements.py  test_basic_crud.py  test_errors.py
tests/integration/: test_09_nivel2_improvements.py  test_12_nyc_taxi_performance.py
tests/nyc_taxi/: test_nyc_1gb_clean.py  test_real_nyc_data.py  test_real_nyc_data_1gb.py  test_real_nyc_data_1gb_fast.py  test_real_nyc_data_1gb_ultra.py
tests/performance/: benchmark_nyc_taxi.py  test_nyc_operations.py
tests/unit/: test_06_pydantic_api.py  test_13_async_crud.py  test_13_improvements.py  test_14_pydantic_v2_compatibility.py
