[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caspyorm"
version = "0.1.0"
authors = [
  { name="CaspyORM Team", email="contact@caspyorm.dev" },
]
description = "Um ORM moderno e Pythonic para Apache Cassandra, inspirado no Pydantic e focado em produtividade e performance."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["cassandra", "orm", "database", "pydantic", "fastapi", "nosql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Database Drivers",
    "Framework :: FastAPI",
    "Typing :: Typed",
]

dependencies = [
  "cassandra-driver>=3.28.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/caspyorm/caspyorm"
Documentation = "https://caspyorm.readthedocs.io"
Repository = "https://github.com/caspyorm/caspyorm"
"Bug Tracker" = "https://github.com/caspyorm/caspyorm/issues"
"Source Code" = "https://github.com/caspyorm/caspyorm"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v --tb=short"
testpaths = [
    "tests",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
pretty = true

[tool.setuptools.packages.find]
include = ["caspyorm*"]
exclude = ["aplicacao*"] 